--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
+    <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -65,15 +66,12 @@
         <div id="qrCode"></div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/qrcode@1.4.4"></script>
     <script>
         function generateQR() {
             var name = document.getElementById("name").value;
             var idNumber = document.getElementById("idNumber").value;
             var contactNumber = document.getElementById("contactNumber").value;
             var userData = "Name: " + name + "\nID Number: " + idNumber + "\nContact Number: " + contactNumber;
-
-            console.log("User Data:", userData); // Log user data
 
             // Clear previous QR code if exists
             document.getElementById("qrCode").innerHTML = '';
@@ -84,8 +82,6 @@
                 width: 300,
                 height: 300
             });
-
-            console.log("QR code generated"); // Log QR code generation
 
             // Show QR code
             document.getElementById("qrCode").style.display = "block";
